# genoh-10base-t1s

./: .gitignore  pyproject.toml
config/: acl_policy.json5  master_config.json5  master_config_tls.json5  plca_config.yaml
config/certs/: ca.crt  ca.key  ca.srl  generate_ca.sh  generate_device_cert.sh  zenoh-node-1.crt  zenoh-node-1.key  zenoh-node-master.crt  zenoh-node-master.key
config/scenarios/: door_zone.yaml  lighting_control.yaml  sensor_polling.yaml
docs/: PRD.md  PRD_REVIEW.md  bidirectional_control_demo.md  cybersecurity.md  functional_safety.md  gui_simulator_design.md  hara.md  interop_test_report.md  safety_case.md  tara.md  test_report_mcu_bus.md  test_report_safety_security.md  traceability_matrix.md
firmware/sam-e70/: CMakeLists.txt  README.md  app_zenoh.c  crypto_stubs.c  drv_mcp3204.c  drv_mcp3204.h  dtc_manager.c  dtc_manager.h  e2e_protection.c  e2e_protection.h  flow_monitor.c  flow_monitor.h  ids_engine.c  ids_engine.h  key_manager.c  key_manager.h  libpic32c.h  safety_manager.c  safety_manager.h  same70q21b_gcc.ld  secoc.c  secoc.h  startup_gcc.c  toolchain-sam-e70.cmake  watchdog.c  watchdog.h
firmware/sam-e70/blink/: CMakeLists.txt
firmware/sam-e70/blink/include/: same70.h
firmware/sam-e70/blink/linker/: same70q21_flash.ld
firmware/sam-e70/blink/src/: main.c  startup_same70.c
firmware/sam-e70/config/: FreeRTOSConfig.h  configuration.h  definitions.h  initialization.c  tasks.c
firmware/sam-e70/config/driver/ethphy/: drv_ethphy.h
firmware/sam-e70/config/driver/ethphy/src/dynamic/: drv_extphy_lan867x.c
firmware/sam-e70/config/peripheral/pio/: plib_pio.c
firmware/sam-e70/config/stdio/: xc32_monitor.c
firmware/sam-e70/zenoh-pico/include/zenoh-pico/: config.h
firmware/sam-e70/zenoh-pico/include/zenoh-pico/system/common/: platform.h
firmware/sam-e70/zenoh-pico/include/zenoh-pico/system/platform/freertos/: harmony.h
firmware/sam-e70/zenoh-pico/src/collections/: atomic.c
firmware/sam-e70/zenoh-pico/src/system/freertos/: system.c
firmware/sam-e70/zenoh-pico/src/system/freertos/harmony/: network.c
gui/: run.py  vehicle_control.py
gui/common/: bus_monitor.py  protocol.py  sim_engine.py  ws_manager.py
gui/master/: app.py
gui/master/static/css/: master.css
gui/master/static/js/: master.js
gui/master/templates/: master.html
gui/slave/: app.py
gui/slave/static/css/: slave.css
gui/slave/static/js/: slave.js
gui/slave/templates/: slave.html
scripts/: install_deps.sh  setup_dual_evb.sh  setup_plca.sh  start_master.sh
sim_harness/: config.py  main.py  orchestrator.py
sim_harness/agents/: definitions.py
sim_harness/tools/: plca_tools.py  safety_tools.py  scenario_tools.py  security_tools.py  zenoh_tools.py
slave_examples/: CMakeLists.txt  actuator_node.c  sensor_node.c
src/common/: e2e_protection.py  key_expressions.py  models.py  payloads.py  safety_types.py  security_types.py
src/master/: acl_manager.py  cert_provisioner.py  cli.py  diagnostics.py  dtc_manager.py  e2e_supervisor.py  flow_monitor.py  ids_engine.py  key_manager.py  main.py  network_setup.py  node_manager.py  safety_log.py  safety_manager.py  scenario_runner.py  secoc.py  security_log.py  self_test.py  watchdog.py  zenoh_master.py
systemd/: zenoh-master-app.service  zenoh-plca-setup.service  zenoh-router.service
tests/: _slave_bus_helper.py  test_acl_manager.py  test_dtc_manager.py  test_e2e_protection.py  test_e2e_supervisor.py  test_flow_monitor.py  test_gui_simulator.py  test_hw_bypass.py  test_hw_safety_security.py  test_ids_engine.py  test_integration_bypass.py  test_interop_hw.py  test_key_expressions.py  test_mcu_advanced.py  test_mcu_bus.py  test_mcu_safety_security.py  test_models.py  test_network_setup.py  test_payloads.py  test_penetration.py  test_safety_foundation.py  test_safety_integration.py  test_safety_manager.py  test_scenario_runner.py  test_secoc.py  test_security_foundation.py  test_security_integration.py  test_self_test.py  test_sim_e2e_scenario.py  test_sim_fault_injection.py  test_sim_safety.py  test_sim_security.py
